[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/game/ui/shop/shop_ui.gd" id="1_shop"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.05, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "VILLAGE TRADING POST"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "Gold: 500"
horizontal_alignment = 2

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 100.0
offset_right = -30.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Left" type="VBoxContainer" parent="Panel/HBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBox/Left"]
layout_mode = 2
text = "Goods for Sale:"

[node name="Scroll" type="ScrollContainer" parent="Panel/HBox/Left"]
layout_mode = 2
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Panel/HBox/Left/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Right" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/Right"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="Label" parent="Panel/HBox/Right/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Item Name"

[node name="HSeparator" type="HSeparator" parent="Panel/HBox/Right/VBox"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/HBox/Right/VBox"]
layout_mode = 2
text = "Select an item to see details..."
autowrap_mode = 2

[node name="Stats" type="Label" parent="Panel/HBox/Right/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
text = "Stats info..."

[node name="BuyButton" type="Button" parent="Panel/HBox/Right"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
disabled = true
text = "PURCHASE ITEM"

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "LEAVE SHOP"

[connection signal="pressed" from="Panel/HBox/Right/BuyButton" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_pressed"]
